Changed the way I was displaying the actionDescriptions. Content overflowing off of the page shouldn't be an issue anymore.

--- a/front-end/distribution/style.css
+++ b/front-end/distribution/style.css
@@ -514,7 +514,7 @@ body {
   padding: 5px;
   position: absolute;
   z-index: 1;
-  top: 100%;
+  bottom: 100%;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
